--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <img class="img-responsive" src="img/profile.png" alt="">
+                    <img class="img-responsive" src="img/profile/headshot.jpg" alt="">
                     <div class="intro-text">
                         <span class="name">J Beightol</span>
                         <hr class="star-light">
@@ -87,7 +87,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2>Portfolio</h2>
+                    <h2>J's Portfolio</h2>
                     <hr class="star-primary">
                 </div>
             </div>
@@ -96,6 +96,7 @@
                     <a href="#portfolioModal1" class="portfolio-link" data-toggle="modal">
                         <div class="caption">
                             <div class="caption-content">
+                                <h2>Project 1 </h2>
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
                         </div>
