--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                     <span class="sr-only">Toggle navigation</span> Menu <i class="fa fa-bars"></i>
                 </button>
-                <a class="navbar-brand" href="#page-top">Data Science</a>
+                <a class="navbar-brand" href="#page-top">Data Science TEST!</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -107,6 +107,7 @@
                     <a href="#portfolioModal2" class="portfolio-link" data-toggle="modal">
                         <div class="caption">
                             <div class="caption-content">
+                                <h2>Project 2 </h2>
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
                         </div>
