--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                     <span class="sr-only">Toggle navigation</span> Menu <i class="fa fa-bars"></i>
                 </button>
-                <a class="navbar-brand" href="#page-top">Data Science TE!</a>
+                <a class="navbar-brand" href="#page-top">Data Science TEs!</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -71,7 +71,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <img class="img-responsive" src="img/portfolio/headshot.jpg" alt="">
+                    <img class="img-responsive" src="img/portfolio/headshot-crop.jpg" alt="">
                     <div class="intro-text">
                         <span class="name">J Beightol</span>
                         <hr class="star-light">
@@ -94,7 +94,6 @@
             <div class="row">
                 <div class="col-sm-4 portfolio-item">
                     <a href="#portfolioModal1" class="portfolio-link" data-toggle="modal">
-                        <h2>Project 1 </h2>
                         <div class="caption">
                             <div class="caption-content">
                                 <h2>Project 1 </h2>
